--- a/todos.html
+++ b/todos.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Roommate Homepage</title>
+    <title>To-dos</title>
     <link rel="icon" href="assets/images/logo-atas.png" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css" />
